# realworld-dojo

./: readme.md
backend/: pyproject.toml  readme.md  yoyo.ini
backend/conduit/: wsgi.py
backend/conduit/api/: articles.py  users.py
backend/conduit/swagger/: swagger.yaml
backend/migrations/: 0000.initial.rollback.sql  0000.initial.sql
frontend/: readme.md
mobile/: readme.md
